--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -1,21 +1,13 @@
 <plist version="1.0">
   <dict>
-    <key>CFBundleDevelopmentRegion</key>
-    <string>English</string>
-    <key>CFBundleExecutable</key>
-    <string>Hello</string>
     <key>CFBundleIdentifier</key>
     <string>com.plexapp.plugins.adultswim</string>
-    <key>CFBundleInfoDictionaryVersion</key>
-    <string>6.0</string>
-    <key>CFBundlePackageType</key>
-    <string>AAPL</string>
-    <key>CFBundleSignature</key>
-    <string>hook</string>
-    <key>CFBundleVersion</key>
-    <string>1.0</string>
-    <key>PlexPluginMode</key>
-    <string>AlwaysOn</string>
+    <key>PlexClientPlatforms</key>
+    <string>*</string>
+    <key>PlexPluginRegions</key>
+    <array>
+      <string>US</string>
+    </array>
     <key>PlexFrameworkVersion</key>
     <string>2</string>
   </dict>
